# ECE-Portfolio-Analysis-Engine

./: .dockerignore  .gitignore  COR_DCF.xlsx  Dockerfile [Depreciated for now]  README.md  Screener_Input.txt  Sprint 1.md  UI.md  backtest_candidate.py  config.py  covariance_estimator.py  finoracle_utils.py  finoracle_wrapper.py  implementation_plan.md  optimal_allocation.py  portfolio_loader.py  portfolio_reconstruction.py  pyproject.toml  rebalancing.py  refinitiv_roadmap.md  requirements.txt  run_analysis.py  run_from_screener.py  run_multi_allocation.py  screener-results.csv  streamlit_app.py  stress_testing.py  valuation_engine.py
Forecast/FinCast-fts/: .gitignore  requirements.txt  setup_env.sh
Forecast/FinCast-fts/Inference/: download_model.py  fetch_data.py  finoracle_bridge.py  inference_pipeline.py  pretty_show_forecast.py  run.py
Forecast/FinCast-fts/src/: __init__.py
Forecast/Regular/: forecasting_tiers.py  forecasting_utils.py  sentiment_engine.py
MD/: FORECAST_README.md  README copy.md  UI.md  deployment_guide.md  implementation_plan.md
analysis_outputs/run_20260201_012903/: input_screener.csv
analysis_outputs/run_20260201_012903/0_portfolio/: portfolio_risk_metrics.csv
analysis_outputs/run_20260201_012903/AMGN/: backtest.csv  optimal_summary.csv
analysis_outputs/run_20260201_012903/BMY/: backtest.csv  optimal_summary.csv
analysis_outputs/run_20260201_012903/COR/: backtest.csv  (+1 more)
analysis_outputs/run_20260201_163119/: input_criterias.txt  input_screener.csv
default/: default_holdings.csv  default_screener_results.csv  default_sectors.csv
(+74 files in other folders)
